tests/baselines/reference/tsxElementResolution12.errors.txt
file.tsx(23,1): error TS2607: JSX element class does not support attributes because it does not have a 'pr' property.
file.tsx(25,1): error TS2607: JSX element class does not support attributes because it does not have a 'pr' property.
file.tsx(26,1): error TS2607: JSX element class does not support attributes because it does not have a 'pr' property.
file.tsx(33,7): error TS2322: Type 'string' is not assignable to type 'number'.


==== file.tsx (4 errors) ====
    declare module JSX {
    	interface Element { }
    	interface ElementAttributesProperty { pr: any; }
    	interface IntrinsicElements { }
    }
    
    interface Obj1type {
    	new(n: string): any;
    }
    var Obj1: Obj1type;
    <Obj1 x={10} />; // OK
    
    interface Obj2type {
    	new(n: string): { q?: number; pr: any };
    }
    var Obj2: Obj2type;
    <Obj2 x={10} />; // OK
    
    interface Obj3type {
    	new(n: string): { x: number; };
    }
    var Obj3: Obj3type;
    <Obj3 x={10} />; // Error
    ~~~~~~~~~~~~~~~
!!! error TS2607: JSX element class does not support attributes because it does not have a 'pr' property.
    var attributes: any;
    <Obj3 {...attributes} />; // Error
    ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2607: JSX element class does not support attributes because it does not have a 'pr' property.
    <Obj3 {...{}} />; // OK
    ~~~~~~~~~~~~~~~~
!!! error TS2607: JSX element class does not support attributes because it does not have a 'pr' property.
    
    interface Obj4type {
    	new(n: string): { x: number; pr: { x: number; } };
    }
    var Obj4: Obj4type;
    <Obj4 x={10} />; // OK
    <Obj4 x={'10'} />; // Error
          ~
!!! error TS2322: Type 'string' is not assignable to type 'number'.
!!! related TS6500 file.tsx:29:37: The expected type comes from property 'x' which is declared here on type '{ x: number; }'
    